SERVER-51689 _configsvrCommitSplitChunk is not waiting for opTime on early return